@@ -11,7 +11,6 @@ struct sk_buff;
 
 struct dst_ops {
 	unsigned short		family;
-	__be16			protocol;
 	unsigned		gc_thresh;
 
 	int			(*gc)(struct dst_ops *ops);
